CHANGES.txt - 11/13/2001
------------------------

CHANGES IN CUPS V1.1.12

	- Added "Polish" to the list of known languages for PPD
	  files.
	- Added missing directory definition to cups-config.
	- The CUPS-Move-Job operation did not set the
	  destination type for the new destination.
	- The CUPS-Add-Printer operation did not support the
	  allow=all or deny=none values to clear the per-user
	  printer ACLs.


CHANGES IN CUPS V1.1.11

	- Added support for embedded TrueType fonts in PDF
	  files.
	- Added support for PostScript functions in PDF
	  files.
	- Added new "cupsaddsmb" utility for exporting
	  CUPS printer drivers to SAMBA/Windows clients.
	- Added preliminary support for Darwin/MacOS X.
	- The CUPS-Add-Printer operation no longer allows
	  arbitrary scheme names in device URIs to be used - it
	  now restricts the available schemes to those found in
	  the device list (lpinfo -m).
	- The ippRead() and ipp_read_file() functions could not
	  handle more than IPP_MAX_VALUES (100) values in a
	  1setOf attribute.  These functions have been updated
	  to dynamically allocate more memory as needed, and the
	  IPP_MAX_VALUES constant now represents the allocation
	  increment.  [this caused some versions of the
	  GIMP-print drivers to fail since the number of media
	  options exceeded 100...]
	- The scheduler could crash when BrowseShortNames
	  was set to "No".
	- The scheduler did not prevent MaxClients from being
	  set to 0, which could cause the scheduler to go in an
	  infinite loop when accepting a request.
	- Made some performance optimizations in the ippRead()
	  functions to make IPP request/response processing
	  faster.
	- The accept/reject/enable/disable command did not
	  support properly support the "-h" or default
	  server name.
	- The scheduler did not save the quota configuration
	  when the job-quota-period attribute was set to 0.
	- The LPDEST and PRINTER environment variables did not
	  support printer instances.